--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
         "Metas",
+        "fuit",
+        "lbox",
         "loded",
+        "paddding",
+        "responsiveslides",
         "smoothscroll"
     ]
 }
