--- a/Pipfile
+++ b/Pipfile
@@ -9,10 +9,10 @@ verify_ssl = true
 django = "*"
 selenium = "*"
 chromedriver-binary = "*"
-pandas = "==1.1.2"
 gunicorn = "*"
 django_heroku = "*"
 dj-database-url = "*"
+pandas = "~=0.24.2"
 
 [requires]
 python_version = "3.7"
