--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-database-url==0.5.0
 Django==3.1.2
 django-heroku==0.3.1
 gunicorn==20.0.4
+lxml==4.5.2
 numpy==1.19.2
 pandas==0.24.2
 python-dateutil==2.8.1
