--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "paddding",
         "responsiveslides",
         "smoothscroll"
-    ]
+    ],
+    "python.pythonPath": "/Users/yutakakudo/.pyenv/shims/python"
 }
