base.html delete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,15 @@
     
     "cSpell.words": [
         "Metas",
+        "dbmodel",
         "fuit",
         "lbox",
         "loded",
         "paddding",
         "responsiveslides",
-        "smoothscroll"
+        "smoothscroll",
+        "wngi",
+        "wngp"
     ],
     "python.pythonPath": "/Users/yutakakudo/.pyenv/shims/python"
 }
